<resources>
    <string name="app_name">High Contrast</string>
    <string name="facebook_app_id">1016339735051091</string>
    <string name="title_activity_base">Base Activity</string>
    <string name="title_activity_welcome">Welcome to High Contrast</string>
    <string name="title_activity_challenges">Challenges</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- Navigation Drawer list items -->
    <string name="profile">Profile</string>
    <string name="new_challenge">New Challenge</string>
    <string name="challenges">Challenges</string>
    <string name="completed">Completed</string>
    <string name="achievements">Achievements</string>
    <string name="settings">Settings</string>
    <string name="help_feedback">Help &amp; Feedback</string>


    <string name="hello_world">Hello world!</string>

    <string name="preferences_key">com.bradenhart.hcnavigationview.toggle</string>
    <string name="facebook_login">Facebook Login</string>
</resources>
