<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_account_box_black_18dp"
            android:title="@string/profile" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/new_challenge"
            android:icon="@drawable/ic_play_arrow_black_18dp"
            android:title="@string/new_challenge"/>
        <item
            android:id="@+id/challenges"
            android:icon="@drawable/ic_list_black_18dp"
            android:title="@string/challenges" />
        <item
            android:id="@+id/completed"
            android:icon="@drawable/ic_whatshot_black_48dp"
            android:title="@string/completed" />
        <item
            android:id="@+id/achievements"
            android:icon="@drawable/ic_star_rate_black_18dp"
            android:title="@string/achievements" />
    </group>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_black_18dp"
            android:title="@string/settings" />
        <item
            android:id="@+id/help_feedback"
            android:icon="@drawable/ic_help_black_18dp"
            android:title="@string/help_feedback" />
    </group>

</menu>